--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ repository = "https://github.com/Northo/advent-of-code-2023"
 
 [tool.poetry.dependencies]  # https://python-poetry.org/docs/dependency-specification/
 python = ">=3.12,<4.0"
+pydantic = "^2.5.2"
+pydantic-settings = "^2.1.0"
 
 [tool.poetry.group.test.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
 coverage = { extras = ["toml"], version = ">=7.2.5" }
@@ -23,6 +25,7 @@ pytest-clarity = ">=1.0.1"
 pytest-mock = ">=3.10.0"
 pytest-xdist = ">=3.2.1"
 ruff = ">=0.1.3"
+types-requests = "^2.31.0.10"
 
 [tool.poetry.group.dev.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
 cruft = ">=2.14.0"
