--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ repository = "https://github.com/Northo/advent-of-code-2023"
 python = ">=3.12,<4.0"
 pydantic = "^2.5.2"
 pydantic-settings = "^2.1.0"
+pandas = "^2.1.4"
 
 [tool.poetry.group.test.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
 coverage = { extras = ["toml"], version = ">=7.2.5" }
